# Matrix

./: .gitignore  CMakeLists.txt  README.md  allocations.cc  matrix.cc  matrix.hpp  matrixchain.cpp  matrixtest.cc
include/: matrix.hpp  matrixchain.hpp
tests/: multiplication_01_classic.txt  multiplication_02_reversed_classic.txt  multiplication_03_STL_algos.txt
